// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table/with selectable rows with preselected rows 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c5 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c8 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c6:focus + .c7 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6:checked + .c7 {
  border-color: #00438f;
  background-color: #00438f;
}

.c6:checked + .c7:before {
  display: block;
}

.c6:not(:checked) + .c7 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c4 {
  padding: 4px 0;
}

.c4 .Text-sc-1wu7vpu-0 {
  margin-left: 8px;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 30px;
}

.c3:first-child {
  padding-left: 16px;
}

.c9 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c9:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c11 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c11:first-child {
  padding-left: 16px;
}

.c10:hover {
  background-color: #f0f2f5;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="select all"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={true}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={true}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-01
          </td>
          <td
            className="c11"
          >
            2,025 eaches
          </td>
          <td
            className="c11"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-02
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-03
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-04
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            675 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-07
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-22
          </td>
          <td
            className="c11"
          >
            1,725 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-23
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-24
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;

exports[`Storyshots Table/with selectable rows with selectable rows 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c5 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c8 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c6:focus + .c7 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6:checked + .c7 {
  border-color: #00438f;
  background-color: #00438f;
}

.c6:checked + .c7:before {
  display: block;
}

.c6:not(:checked) + .c7 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c4 {
  padding: 4px 0;
}

.c4 .Text-sc-1wu7vpu-0 {
  margin-left: 8px;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 30px;
}

.c3:first-child {
  padding-left: 16px;
}

.c9 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c9:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c11 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c11:first-child {
  padding-left: 16px;
}

.c10:hover {
  background-color: #f0f2f5;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="select all"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-01
          </td>
          <td
            className="c11"
          >
            2,025 eaches
          </td>
          <td
            className="c11"
          >
            1,800 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-02
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            2,250 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-03
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            1,425 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-04
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            675 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-07
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            1,575 eaches
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-22
          </td>
          <td
            className="c11"
          >
            1,725 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-23
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
        <tr
          className="c10"
          data-testid="table-row"
        >
          <td
            className="c11"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c11"
          >
            2019-10-24
          </td>
          <td
            className="c11"
          >
            2,475 eaches
          </td>
          <td
            className="c11"
          >
            -
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</div>
`;
